--- a/Demo.Presentation/appsettings.Development.json
+++ b/Demo.Presentation/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=MvcProjectDb;Trusted_Connection = true;TrustServerCertificate = true"
   }
 }
